2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* gendef (stabilize_sig_stack): New function.
	(setjmp): Import, add sig stack handling.  Store sig stack info.
	(longjmp): Call stabilize_sig_stack.  Restore sig stack info.
	* config/i386/setjmp.c: Remove.

2004-02-17  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (fork_child): Move fixup_shms_after_fork so that
	signal_arrived is initialized when calling it.

2004-02-17  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (clean): Clean libserver, too.

	* fhandler.cc (fhandler_base::~fhandler_base): Remove path_conv cleanup.
	* syscalls.cc (chroot): Ditto.
	* path.cc (path_conv::~path_conv): Define new destructor.
	(conv_path_list_buf_size): Remove explicit path_conv cleanup.
	* path.h (path_conv::~path_conv): Declare new destructor.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile flock.o with -fomit-frame-pointer.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile dlfcn.o with -fomit-frame-pointer.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile delqueue.o with -fomit-frame-pointer.

2004-02-16  Pierre Humblet <pierre.humblet@ieee.org>

	* syscalls.cc (rename): Do not test the MoveFile error code
	where MoveFileEx exists.

2004-02-15  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (_csbrk): Report more debugging details on failing
	condition.

2004-02-14  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile syscalls.o with -fomit-frame-pointer.

	* sigproc.cc: Eliminate unused variable.

2004-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* getopt.c: Replace with latest NetBSD version 1.16.  Keep Cygwin
	specific changes as minimal as possible.

2004-02-13  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (proc_subproc): Change warning back to silent debug
	output.

2004-02-13  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (alloc_stack_hard_way): Revert to previous implementation.
	(alloc_stack): Ditto.